--- a/BlockInterpreter.xcodeproj/xcshareddata/xcschemes/BlockInterpreter.xcscheme
+++ b/BlockInterpreter.xcodeproj/xcshareddata/xcschemes/BlockInterpreter.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "495B416729FCEFD300DEF375"
-               BuildableName = "BlockInterpreter.app"
-               BlueprintName = "BlockInterpreter"
+               BlueprintIdentifier = "84751A5B2A061A62003096DA"
+               BuildableName = "ConsoleInterpreter"
+               BlueprintName = "ConsoleInterpreter"
                ReferencedContainer = "container:BlockInterpreter.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -43,12 +43,16 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "495B416729FCEFD300DEF375"
-            BuildableName = "BlockInterpreter.app"
-            BlueprintName = "BlockInterpreter"
+            BlueprintIdentifier = "84751A5B2A061A62003096DA"
+            BuildableName = "ConsoleInterpreter"
+            BlueprintName = "ConsoleInterpreter"
             ReferencedContainer = "container:BlockInterpreter.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <LocationScenarioReference
+         identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
+         referenceType = "1">
+      </LocationScenarioReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
